--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,166 @@ body{
     font-family: 'Courier New', Courier, monospace;
     color: white;
 }
+  
+  
+blockquote {
+   color: rgba(250, 200, 130, 0.6);
+   font-family: Tahoma, sans-serif;
+   font-size: 30px;
+   width: 60%;
+   margin: 0 auto;
+}
+blockquote h1 {
+   font-size: 4rem;
+}
+blockquote p {
+   font-style: italic;
+   margin-bottom: 0;
+}
+
+blockquote p::before,
+blockquote p::after {
+   content: "“";
+   font-family: Georgia;
+   font-size: 8rem;
+   margin: -4rem -0.3rem 0 -4rem;
+   position: absolute;
+   opacity: 0.5;
+}
+
+blockquote p::after {
+   content: "”";
+   margin: -1rem -4rem 0 0;
+}
+
+blockquote cite {
+   font-size: 1.5rem;
+}
+
+  .parallax { 
+  /* The image used */
+  background-image: url("../assets/img/parallax1.png");
+
+  /* Set a specific height */
+  height: 650px; 
+
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: auto !important;
+}
+.parallax2 { 
+  /* The image used */
+  background-image: url("../assets/img/parallax2.jpg");
+
+  /* Set a specific height */
+  height: 650px; 
+
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: auto !important;
+}
+
+ .box2{
+    width: 1800px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 0px;
+    margin: 0 auto;
+    padding: 0 auto !important;
+
+  }
+  .card2{
+    position: relative;
+    width: 1000px;
+    height: 400px;
+    background: #212121;
+    margin: 0 auto;
+    border-radius: 4px;
+    padding: 0 auto !important;
+    box-shadow:0 2px 10px rgba(0,0,0,.2);
+    
+  }
+  .card2:before,
+  .card2:after
+  {
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    background: #0f0f0f;
+    transition: 0.5s;
+    z-index: -1;
+  }
+  /*.card2:hover:before{
+  transform: rotate(20deg);
+  box-shadow: 0 2px 20px rgba(0,0,0,.2);
+  }
+  .card2:hover:after{
+  transform: rotate(10deg);
+  box-shadow: 0 2px 20px rgba(0,0,0,.2);
+  }*/
+  .card2 .imgBx{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  bottom: 10px;
+  right: 10px;
+  background: #0f0f0f;
+  transition: 0.5s;
+  z-index: 1;
+  }
+  
+  .card2:hover .imgBx
+  {
+    bottom: 80px;
+    
+  }
+
+  .card2 .imgBx img{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+  }
+
+  .card2 .details{
+      position: absolute;
+      left: 10px;
+      right: 10px;
+      bottom: 10px;
+      height: 60px;
+      text-align: center;
+  }
+
+  .card2 .details h2{
+   margin: 0;
+   padding: 0;
+   font-weight: 600;
+   font-size: 20px;
+   color: #777;
+   text-transform: uppercase;
+  } 
+
+  .card2 .details h2 span{
+  font-weight: 500;
+  font-size: 16px;
+  color: #f38695;
+  display: block;
+  margin-top: 5px;
+   } 
 .name{
     color: #343d46;
 }
@@ -13,6 +173,7 @@ body{
 
 .navbar{
     background-color: transparent !important;
+    z-index: 5;
 }
 
 .cf{
@@ -158,4 +319,4 @@ body{
       height: 150px !important;
   }
   
-  
+ 
